# AirLLM

./: .env-example  .gitignore  LICENSE  README.he.md  README.md  pyproject.toml
analysis/: analyze.py  economics.py  plots.py
config/: logging_config.json  rate_limits.json  setup.json
docs/: PLAN.md  PRD.md  PRD_airllm.md  PRD_economics.md  PRD_quantization.md  PROMPT_LOG.md  SELF_ASSESSMENT.md  TODO.md
experiments/: config.py  run_airllm.py  run_baseline.py  run_ollama.py
notebooks/: analysis.ipynb
reports/: report.he.md  report.md
results/: airllm_fp16_medium.json  airllm_fp16_short.json  airllm_q4_medium.json  airllm_q8_medium.json  baseline_medium.json  baseline_short.json  hardware.json  ollama_q4_long_context.json  ollama_q4_medium.json  ollama_q4_short.json  ollama_q8_short.json  summary_table.md
src/: airllm_runner.py  baseline_runner.py  hardware.py  metrics.py  model_selector.py  ollama_runner.py  prompts.py
src/airllm_bench/: __init__.py  constants.py  main.py
src/airllm_bench/sdk/: __init__.py  sdk.py
src/airllm_bench/services/: __init__.py  airllm_runner.py  analyze.py  baseline_runner.py  economics.py  hardware.py  metrics.py  model_selector.py  ollama_runner.py  plots.py  prompts.py
src/airllm_bench/shared/: __init__.py  config.py  version.py
tests/: conftest.py
tests/unit/: test_analyze.py  test_config.py  test_constants_version.py  test_economics.py  test_hardware.py  test_metrics.py  test_model_selector.py  test_ollama_runner.py  test_prompts.py  test_sdk.py
