[project]
name = "ex05-airllm"
version = "1.0.0"
description = "EX05 - Running a Massive LLM Locally: AirLLM, Quantization and Performance Benchmarking"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.2",
    # AirLLM 2.11 hard-imports optimum.bettertransformer, which only works with
    # the transformers 4.4x API (transformers 5.x removed is_tf_available and
    # BetterTransformer). Pin the whole chain to a mutually-compatible set —
    # these exact versions were verified to import and run on the target machine.
    "transformers>=4.44,<4.45",
    "optimum>=1.20,<2.0",
    "sentencepiece>=0.2",        # required by AirLLM's Baichuan tokenizer import
    "accelerate>=0.33",
    "airllm>=2.11",
    "bitsandbytes>=0.43; platform_system != 'Darwin'",
    "huggingface-hub>=0.24",
    "psutil>=5.9",
    "matplotlib>=3.8",
    "numpy>=1.26",
]

# NOTE on Python version: AirLLM and bitsandbytes lag the newest CPython release.
# Pin to 3.10-3.12. Do NOT use 3.13 yet (see README "Known pitfalls").
# NOTE on transformers: must stay <4.45 for AirLLM 2.11 — see comment above.

[project.optional-dependencies]
# Optional: the GGUF quantization comparison via Ollama (Q4/Q8 on CPU).
ollama = ["ollama>=0.3"]
# Dev tooling: linting and testing.
dev = ["ruff>=0.5", "pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
airllm-bench = "airllm_bench.main:main"

[tool.uv]
# uv is the only package manager used in this project:
#   uv venv && uv pip install -e .
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/airllm_bench"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=airllm_bench --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["airllm_bench"]
# Heavy/IO modules that require torch/airllm/ollama or a display are exercised
# via mocks/integration only and excluded from the unit-coverage gate.
omit = [
    "*/main.py",
    # These two genuinely require torch / transformers / airllm and a model on
    # disk; they are exercised via the SDK with mocks rather than unit-covered.
    "*/services/baseline_runner.py",
    "*/services/airllm_runner.py",
    "*/services/plots.py",
]

[tool.coverage.report]
fail_under = 90
